	1308 Golden Axe:		NEED INFO.
	13160, 13161 Destroyer:	Can break target's armor when fired at close range.
	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

========================
10/25
	* Fixed view ids of some headgears [Playtester]
10/24
	* Kiel Mob updates [Playtester]
	* Reverted Lupus' map_index update. map_index should NOT be touched. [Vicious]
	* Updated map index accordingly [Lupus]
10/23
	* Adjusted LK_BERSERK so you can only use it when you have 20% or less
	  life. [Skotlex]
10/20
	* Official Muscipular drops [Playtester]
10/19
	* Added the actual skill delay of 1000ms to Triple Attack and Chain combo
	  in skill_cast_db. Added Combo Finish and TigerFist as well with a delay of
	  700ms. [Skotlex]
	* Added the Monk combos to skill_castnodex so their delay is not decreased
	  by skills. [Skotlex]
10/18
	* Updated the packetdb for the 2006-10-17a client. [Zephiris]
10/16
	* Corrected issen's range to 5, as per the login packet information.
	  [Skotlex]
	* Applied most of Mpeg's work on Ninja Skills. For information see:
	  http://gpegon.free.fr/ea/ninja_10-15-06_mpeg.txt [Skotlex]
	* Small Kiel MVP drop rate increase [Playtester]
10/14
	* Fixed Bacsojin's and Chung E's stats [Playtester]
10/12
	* Reverted GS/NJ Job Exp [Playtester]
	- better too high than too low
	* Corrected Caprice cast info. No cast time, delay time equal to the bolt
	  spells. [Skotlex]
	* Probably official GS/NJ Job Exp [Playtester]
10/09
	* Fixed High Quality Sandals not being refinable [Playtester]
10/08
	* Probably final drop rate increase [Playtester]
10/06
	* Reverted size fix for Guns and Shuriken [Playtester]
	- it appears they are 100% to all after all
10/05
	* Selling price of Broken Pieces 10z -> 400z [Playtester]
	* Raised the drop rates of most combo equips [Playtester]
10/04